# CI_CD_Project

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  run_py_tests.sh
tests/: string_test.py
