[tool.poetry]
name = "ci-cd-project"
version = "0.1.0"
description = ""
authors = ["Mykola Rudym <mykola_rudym@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
unittest2 = "^1.1.0"
unittest-xml-reporting = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
